--- a/server-side/package.json
+++ b/server-side/package.json
@@ -23,7 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "deta": "^1.1.0",
+    "deta": "^1.2.0",
+    "dotenv": "^16.3.1",
+    "iconv-lite": "^0.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
