フロントサイド PredictionFormServiceクラスのテストを追加。

--- a/front-side/angular.json
+++ b/front-side/angular.json
@@ -98,7 +98,8 @@
             "styles": [
               "projects/main/src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "projects/main/karma.conf.js"
           }
         }
       }
