--- a/front-side/package.json
+++ b/front-side/package.json
@@ -6,7 +6,7 @@
     "serve": "ng serve --host 0.0.0.0 --poll 2000 --project main",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test:main": "ng test -- ",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "private": true,
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@apollo/client": "^3.0.0",
+    "@yamadash82/yamadash-ex-primitive": "^1.0.0",
     "apollo-angular": "^5.0.2",
     "graphql": "^16",
     "rxjs": "~7.8.0",
@@ -33,6 +34,7 @@
     "@angular/cli": "~16.1.8",
     "@angular/compiler-cli": "^16.1.0",
     "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/introspection": "4.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-apollo-angular": "4.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.1",
@@ -46,7 +48,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "typescript": "~5.1.3",
-    "@graphql-codegen/introspection": "4.0.0"
+    "typescript": "~5.1.3"
   }
 }
