--- a/front-side/package.json
+++ b/front-side/package.json
@@ -27,6 +27,7 @@
     "graphql": "^16",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@graphql-codegen/typescript-apollo-angular": "4.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
