--- a/server-side/package.json
+++ b/server-side/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "deta": "^1.2.0",
     "graphql": "^16.7.1",
     "graphql-type-json": "^0.3.2",
@@ -43,6 +44,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
