--- a/front-side/package.json
+++ b/front-side/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@apollo/client": "^3.0.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@yamadash82/yamadash-ex-primitive": "^1.0.0",
     "apollo-angular": "^5.0.2",
     "graphql": "^16",
