フロントサイド   新規ユーザー登録画面とその処理を追加。 サーバーサイド   ログイン時、ユーザー情報の最終ログイン日時を更新するように修正。

--- a/front-side/tsconfig.json
+++ b/front-side/tsconfig.json
@@ -25,7 +25,7 @@
     ],
     "paths": {
       "@common_modules/*": [
-        "/app/common_modules/*"
+        "/app/server-side/shared_modules/*"
       ]
     },
     "allowSyntheticDefaultImports": true
