--- a/front-side/angular.json
+++ b/front-side/angular.json
@@ -106,6 +106,16 @@
             ],
             "scripts": [],
             "karmaConfig": "projects/main/karma.conf.js"
+          },
+          "configurations": {
+            "development": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/main/src/environments/environment.ts",
+                  "with": "projects/main/src/environments/environment.development.ts"
+                }
+              ]
+            }
           }
         }
       }
