--- a/front-side/package.json
+++ b/front-side/package.json
@@ -6,7 +6,7 @@
     "serve": "ng serve --host 0.0.0.0 --poll 2000 --project main",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test:main": "ng test -- ",
+    "test": "ng test --configuration development ",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "private": true,
