--- a/server-side/.gitignore
+++ b/server-side/.gitignore
@@ -1,6 +1,7 @@
 # compiled output
 /dist
 /node_modules
+/app
 
 # Logs
 logs
@@ -40,3 +41,6 @@ lerna-debug.log*
 
 # ファン手帳情報を除外する。
 /fan-notes
+
+# Spacefileを除外する。
+Spacefile
