--- a/server-side/package.json
+++ b/server-side/package.json
@@ -29,7 +29,8 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "bcrypt": "^5.1.1",
+    "@nestjs/serve-static": "^4.0.2",
+    "bcrypt-ts": "^5.0.2",
     "deta": "^1.2.0",
     "graphql": "^16.7.1",
     "graphql-type-json": "^0.3.2",
