--- a/server-side/package.json
+++ b/server-side/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build --builder webpack",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node dist/main.js",
     "start:dev": "nest start --watch --builder webpack",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
