フロントサイド アプリタイトルの横にバージョンを表記するように修正。 バージョン番号はpackage.jsonから取得する。

--- a/front-side/tsconfig.json
+++ b/front-side/tsconfig.json
@@ -28,7 +28,8 @@
         "/app/server-side/shared_modules/*"
       ]
     },
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true, 
+    "resolveJsonModule": true 
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
